--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
             </div>
             <div class="small-12 columns layouts text-center">
                 <ul>
-                    <li><a href="home.html">Homepage</a></li>
-                    <li><a href="works.html">Works</a></li>
-                    <li><a href="vidinis.html">vidinis</a></li>
-                    <li><a href="contacts.html">Contacts</a></li>
-                    <li><a href="offer.html">offer</a></li>
+                    <li><a href="raikkonen49.github.io/UGAS/lhome.html">Homepage</a></li>
+                    <li><a href="raikkonen49.github.io/UGAS/works.html">Works</a></li>
+                    <li><a href="raikkonen49.github.io/UGAS/vidinis.html">vidinis</a></li>
+                    <li><a href="raikkonen49.github.io/UGAS/contacts.html">Contacts</a></li>
+                    <li><a href="raikkonen49.github.io/UGAS/offer.html">offer</a></li>
                 </ul>
             </div>
         </div>
