--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="small-12 columns layouts text-center">
                 <ul>
-                    <li><a href="https://raikkonen49.github.io/UGAS/home.htm">Homepage</a></li>
+                    <li><a href="https://raikkonen49.github.io/UGAS/home.html">Homepage</a></li>
                     <li><a href="https://raikkonen49.github.io/UGAS/works.html">Works</a></li>
                     <li><a href="https://raikkonen49.github.io/UGAS/vidinis.html">vidinis</a></li>
                     <li><a href="https://raikkonen49.github.io/UGAS/contacts.html">Contacts</a></li>
